testsuite/bsc.interra/preprocessorTestcases/define/Define_diffMacroNames.bsv.bsc-out.expected
checking package dependencies
Error: "Define_diffMacroNames.bsv", line 6, column 1: (P0142)
  Invalid id `1222'
